# fence

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  action-bundle-host-transitions.json  dependabot.yml
action/: bundle-manifest.json  lib.cts  lib.js  log.cts  main.cts  main.js  post.cts  post.js  test.cts  test.js
docs/: allowlist.md  cli.md  development.md  examples.md  getting-started.md  history.md  how-it-works.md  idea.md  release-provenance.md  repository-settings.md  security-review.md  security.md  threat-model.md  troubleshooting.md  v0.md
script/: assemble-action-bundle  bootstrap  build  classify-action-bundle-host  env  install-test-tools  install-zig  lint  measure-platform-egress  observe-hosted-runner  observe-wireserver-agent  prepare-rust  report-dns-block-candidate  report-selected-profile-runtime  server  test  test-action-acceptance  test-action-bundle-provenance  test-action-release  test-action-setup-failure  test-action-tamper  test-action-wrapper  test-composed  test-dns-block-candidate  test-dns-measurement  test-host-block-candidate  test-lockdown  test-package-smoke  test-privileged  test-profile-candidate  test-protected-run  test-rust-toolchain-preparation  test-selected-profile-runtime  update  update-action-bundle  validate-action-bundle  validate-locks  validate-release-tools  validate-rust-toolchain  validate-test-tools  (+7 more)
src/: attribution.rs  cli.rs  composed.rs  config.rs  dns_mediator.rs  error.rs  findings.rs  hosted_runner.rs  hostname_policy.rs  (+15 more)
(+37 files in other folders)
