[package]
name = "fence"
version = "0.1.4"
edition = "2024"
rust-version = "1.95.0"

authors = ["Grant Birkinbine"]
license = "MIT"
description = "A source-auditable security agent for hardening CI runner egress"
readme = "README.md"
repository = "https://github.com/GrantBirki/fence"

keywords = ["security", "ci", "github-actions", "supply-chain"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = { version = "=0.11.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "=0.2.186"
netlink-sys = { version = "=0.8.8", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
